WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
97189
[BlackBerry] [DRT] fast/forms/textarea-live-pseudo-selectors.html failed
https://bugs.webkit.org/show_bug.cgi?id=97189
Summary
[BlackBerry] [DRT] fast/forms/textarea-live-pseudo-selectors.html failed
Xiaobo Wang
Reported
2012-09-20 03:14:11 PDT
The following line in fast/forms/resources/textarea-live-pseudo-selectors.js doesn't take effect. eventSender.keyDown('\x08', []); Need to translate ASCII key code to BlackBerry key code for BACKSPACE and DELETE key.
Attachments
patch
(2.08 KB, patch)
2012-09-20 03:29 PDT
,
Xiaobo Wang
no flags
Details
Formatted Diff
Diff
patch revision 2
(2.10 KB, patch)
2012-09-25 01:10 PDT
,
Xiaobo Wang
charles.wei
: commit-queue-
Details
Formatted Diff
Diff
patch revision 2
(2.09 KB, patch)
2012-09-25 01:26 PDT
,
Xiaobo Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xiaobo Wang
Comment 1
2012-09-20 03:29:06 PDT
Created
attachment 164880
[details]
patch
Rob Buis
Comment 2
2012-09-24 07:19:36 PDT
Comment on
attachment 164880
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=164880&action=review
Nice find!
> Tools/ChangeLog:9 > +
This does not match the bug title I see on
https://bugs.webkit.org/show_bug.cgi?id=97189
? Please also state what test(s) this fixes.
Rob Buis
Comment 3
2012-09-24 07:20:53 PDT
Comment on
attachment 164880
[details]
patch Good find!
Xiaobo Wang
Comment 4
2012-09-25 01:10:38 PDT
Created
attachment 165549
[details]
patch revision 2 Changed short description to the bug title.
Charles Wei
Comment 5
2012-09-25 01:24:16 PDT
Comment on
attachment 165549
[details]
patch revision 2 Please fix Reviewed by.
Xiaobo Wang
Comment 6
2012-09-25 01:26:16 PDT
Created
attachment 165553
[details]
patch revision 2 Set Reviewed by to Rob Buis.
Charles Wei
Comment 7
2012-09-25 01:29:45 PDT
Comment on
attachment 165553
[details]
patch revision 2 Commit.
WebKit Review Bot
Comment 8
2012-09-25 02:58:24 PDT
Comment on
attachment 165553
[details]
patch revision 2 Clearing flags on attachment: 165553 Committed
r129482
: <
http://trac.webkit.org/changeset/129482
>
Rob Buis
Comment 9
2013-01-04 09:50:32 PST
Landed in
r129482
, closing.
Xiaobo Wang
Comment 10
2013-05-21 20:10:48 PDT
Comment on
attachment 164880
[details]
patch Clear flags for obsolete patch.
Xiaobo Wang
Comment 11
2013-05-21 20:13:11 PDT
close.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug