[BlackBerry] [DRT] fast/forms/textarea-live-pseudo-selectors.html failed https://bugs.webkit.org/show_bug.cgi?id=97189

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2012-09-25
Reviewed by Rob Buis.

Translate ASCII key code to BlackBerry key code for BACKSPACE and DELETE key.

* DumpRenderTree/blackberry/EventSender.cpp:
(keyDownCallback):

Canonical link: https://commits.webkit.org/115501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129482 268f45cc-cd09-0410-ab3c-d52691b4dbfc